Added support for Event Hubs

--- a/TimeOff.Employee/appsettings.json
+++ b/TimeOff.Employee/appsettings.json
@@ -1,12 +1,21 @@
 {
+  "IsLocalEnvironment": false,
   "ProducerConfig": {
     "BootstrapServers": "127.0.0.1:9092",
     "EnableDeliveryReports": true
+  },
+  "ProducerConfigAz": {
+    "BootstrapServers": "<EH NAMESPACE>.servicebus.windows.net:9093",
+    "EnableDeliveryReports": true,
+    "SaslUsername": "$ConnectionString",
+    "SaslPassword": "CONNECTION STRING"
   },
   "AdminClientConfig": {
     "BootstrapServers": "127.0.0.1:9092"
   },
   "SchemaRegistryConfig": {
     "Url": "http://127.0.0.1:8081"
-  }
+  },
+  "SchemaRegistryUrlAz": "<EH NAMESPACE>.servicebus.windows.net",
+  "SchemaRegistryGroupNameAz": "<EH SCHEMA GROUP NAME>"
 }
