--- a/TimeOff.ResultReader/appsettings.json
+++ b/TimeOff.ResultReader/appsettings.json
@@ -1,11 +1,23 @@
 {
+  "IsLocalEnvironment": false,
   "SchemaRegistryConfig": {
     "Url": "http://127.0.0.1:8081"
   },
+  "SchemaRegistryUrlAz": "timeoff-eh.servicebus.windows.net",
+  "SchemaRegistryGroupNameAz": "time-off-schema",
   "ConsumerConfig": {
     "BootstrapServers": "127.0.0.1:9092",
     "GroupId": "application-results",
-    "EnableAutoCommit": true,
+    "EnableAutoCommit": false,
     "EnableAutoOffsetStore": false
+  },
+  "ConsumerConfigAz": {
+    "BootstrapServers": "<EH NAMESPACE>.servicebus.windows.net:9093",
+    "GroupId": "application-results",
+    "EnableAutoCommit": false,
+    "EnableAutoOffsetStore": false,
+    "MaxPollIntervalMs": 300000,
+    "SaslUsername": "$ConnectionString",
+    "SaslPassword": "CONNECTION STRING"
   }
 }
