--- a/TimeOff.Employee/TimeOff.Employee.csproj
+++ b/TimeOff.Employee/TimeOff.Employee.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Data.SchemaRegistry" Version="1.0.0-beta.2" />
+    <PackageReference Include="Azure.Identity" Version="1.3.0" />
     <PackageReference Include="Confluent.Kafka" Version="1.6.3" />
     <PackageReference Include="Confluent.SchemaRegistry.Serdes.Avro" Version="1.6.3" />
+    <PackageReference Include="Microsoft.Azure.Data.SchemaRegistry.ApacheAvro" Version="1.0.0-beta.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="ReadLine" Version="2.0.1" />
