--- a/TimeOff.Manager/appsettings.json
+++ b/TimeOff.Manager/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "IsLocalEnvironment": false,
   "SchemaRegistryConfig": {
     "Url": "http://127.0.0.1:8081"
   },
+  "SchemaRegistryUrlAz": "<EH NAMESPACE>.servicebus.windows.net",
+  "SchemaRegistryGroupNameAz": "<EH SCHEMA GROUP NAME>",
   "ConsumerConfig": {
     "BootstrapServers": "127.0.0.1:9092",
     "GroupId": "manager",
@@ -9,11 +12,26 @@
     "EnableAutoOffsetStore": false,
     "MaxPollIntervalMs": 300000
   },
+  "ConsumerConfigAz": {
+    "BootstrapServers": "<EH NAMESPACE>.servicebus.windows.net:9093",
+    "GroupId": "manager",
+    "EnableAutoCommit": false,
+    "EnableAutoOffsetStore": false,
+    "MaxPollIntervalMs": 300000,
+    "SaslUsername": "$ConnectionString",
+    "SaslPassword": "CONNECTION STRING"
+  },
   "AdminClientConfig": {
     "BootstrapServers": "127.0.0.1:9092"
   },
   "ProducerConfig": {
     "BootstrapServers": "127.0.0.1:9092",
     "EnableDeliveryReports": true
+  },
+  "ProducerConfigAz": {
+    "BootstrapServers": "<EH NAMESPACE>.servicebus.windows.net:9093",
+    "EnableDeliveryReports": true,
+    "SaslUsername": "$ConnectionString",
+    "SaslPassword": "CONNECTION STRING"
   }
 }
